--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
       - ".github/workflows/test.yml"
 
 concurrency:
-  group: ci-tests-${{ github.ref }}
+  group: ci-tests-${{ github.ref }}-test
   cancel-in-progress: true
 
 jobs:
@@ -29,7 +29,7 @@ jobs:
           cache: yarn
 
       - name: Install dependencies
-        run: yarn install --immutable --immutable-cache --check-cache
+        run: yarn install --immutable
 
       - name: Run ESLint
         run: yarn eslint .
@@ -48,10 +48,10 @@ jobs:
           cache: yarn
 
       - name: Install dependencies
-        run: yarn install --immutable --immutable-cache --check-cache
+        run: yarn install --immutable
 
       - name: Grant execute permission for building
-        run: chmod +x build.js
+        run: chmod +x build.cjs
 
       - name: Build
         run: yarn build
