--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,10 @@
     "node": true,
     "es2022": true
   },
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
   "rules": {
     "import/newline-after-import": [
       "error",
