--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
         run: yarn install --immutable
 
       - name: Grant execute permission for building
-        run: chmod +x build.cjs
+        run: chmod +x build.js
 
       - name: Build
         run: yarn build
