--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,4 +4,9 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
 
+packageExtensions:
+  "fastify@*":
+    dependencies:
+      fast-json-stringify: "*"
+
 yarnPath: .yarn/releases/yarn-3.2.1.cjs
