--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,12 +1,12 @@
+packageExtensions:
+  fastify@*:
+    dependencies:
+      fast-json-stringify: "*"
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
 
-packageExtensions:
-  "fastify@*":
-    dependencies:
-      fast-json-stringify: "*"
-
-yarnPath: .yarn/releases/yarn-3.2.1.cjs
+yarnPath: .yarn/releases/yarn-3.2.2.cjs
