update build script

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "type": "module",
   "packageManager": "yarn@3.2.3",
   "scripts": {
-    "build": "./build.js --develop && tsc",
+    "build": "./build.js && tsc",
     "build:prod": "./build.js",
-    "dev": "nodemon --watch src -e ts --exec \"yarn build && yarn node -r dotenv/config ./out/index.js\"",
+    "dev": "nodemon --watch src -e ts --exec \"yarn build && yarn node -r dotenv/config --enable-source-maps ./out/index.js\"",
     "lint": "eslint --fix .",
     "clean": "rimraf out",
     "sdk": "yarn dlx @yarnpkg/sdks"
