--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -3,17 +3,11 @@ name: Deploy
 on:
   push:
     branches:
-      - main
-    paths:
-      - "**/*.js"
-      - "**/*.ts"
-      - "**/*.json"
-      - "yarn.lock"
-      - "Dockerfile"
-      - ".github/workflows/main.yml"
+      - feat/helper
+  workflow_dispatch:
 
 concurrency:
-  group: ci-tests-${{ github.ref }}-main
+  group: ci-tests-${{ github.ref }}-nightly
   cancel-in-progress: true
 
 jobs:
@@ -44,16 +38,17 @@ jobs:
         id: meta
         with:
           images: ghcr.io/${{ github.actor }}/devtool
-          flavor: latest=true
+          flavor: latest=false
           tags: |
             type=sha
             type=sha,format=long
+            nightly
 
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'push' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -85,35 +80,17 @@ jobs:
         id: meta
         with:
           images: ghcr.io/${{ github.actor }}/devtool-helper
-          flavor: latest=true
+          flavor: latest=false
           tags: |
             type=sha
             type=sha,format=long
+            nightly
 
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'push' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-  # deploy:
-  #   name: Deploy
-  #   needs: 
-  #     - main
-  #     - helper
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Rollout
-  #       uses: appleboy/ssh-action@master
-  #       env:
-  #         IMAGE: ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-  #       with:
-  #         host: ${{ secrets.SSH_HOST }}
-  #         username: ${{ secrets.SSH_USER }}
-  #         port: ${{ secrets.SSH_PORT }}
-  #         key: ${{ secrets.SECRET_KEY }}
-  #         envs: IMAGE
-  #         script: kubectl set image deployment/devtool devtool=$IMAGE
