--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Latest
 
 on:
   push:
@@ -93,6 +93,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          file: Dockerfile.helper
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'push' }}
           tags: ${{ steps.meta.outputs.tags }}
