--- a/Dockerfile.helper
+++ b/Dockerfile.helper
@@ -1,4 +1,4 @@
-FROM node:lts-alpine AS base
+FROM node:lts-alpine AS builder
 RUN apk add python3 make g++ wget
 WORKDIR /app
 COPY .yarn/ ./.yarn
@@ -9,14 +9,15 @@ RUN chmod +x build.js
 RUN yarn node build.js
 
 
-FROM node:lts-alpine AS production
-WORKDIR /app
-COPY .yarn/ ./.yarn
-COPY .yarnrc.yml .pnp* package.json yarn.lock ./
-COPY --from=base /app/out .
+# FROM node:lts-alpine AS production
+# WORKDIR /app
+# COPY .yarn/ ./.yarn
+# COPY .yarnrc.yml .pnp* package.json yarn.lock ./
+# COPY --from=base /app/out .
 
 
 FROM node:lts-alpine AS runner
 WORKDIR /app
-COPY --from=production /app ./
-CMD ["yarn", "node", "index.js", "--enable-source-maps"]
+COPY package.json .
+COPY --from=builder /app/out .
+CMD ["node", "index.js", "--enable-source-maps"]
