--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "packageManager": "yarn@3.2.3",
   "scripts": {
     "build": "./build.js && tsc",
-    "build:prod": "./build.js",
+    "build:helper": "./helper/build.js",
     "dev": "nodemon --watch src -e ts --exec \"yarn build && yarn node -r dotenv/config --enable-source-maps ./out/index.js\"",
     "lint": "eslint --fix .",
     "clean": "rimraf out",
@@ -30,7 +30,6 @@
     "fuse.js": "^6.6.2",
     "log4js": "^6.6.1",
     "prettier": "^2.7.1",
-    "tree-kill": "^1.2.2",
     "typescript": "^4.8.3",
     "utf-8-validate": "^5.0.9"
   },
