--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ on:
       - "yarn.lock"
       - "Dockerfile"
       - ".github/workflows/main.yml"
+  schedule:
+    - cron: 0 1 * * 1
 
 concurrency:
   group: ci-tests-${{ github.ref }}-main
