--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "type": "module",
-  "packageManager": "yarn@3.2.3",
+  "packageManager": "yarn@3.2.4",
   "scripts": {
     "build": "./build.js && tsc",
     "build:helper": "./helper/build.js",
@@ -23,28 +23,30 @@
     "sdk": "yarn dlx @yarnpkg/sdks"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.1.2",
     "bufferutil": "^4.0.6",
-    "discord.js": "^14.3.0",
-    "fastify": "^4.5.3",
+    "discord.js": "^14.6.0",
+    "erlpack": "^0.1.4",
+    "fastify": "^4.8.1",
     "fuse.js": "^6.6.2",
-    "log4js": "^6.6.1",
+    "log4js": "^6.7.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.3",
-    "utf-8-validate": "^5.0.9"
+    "typescript": "^4.8.4",
+    "utf-8-validate": "^5.0.9",
+    "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "@types/node": "^18.7.16",
-    "@types/prettier": "^2.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "dotenv": "^16.0.2",
-    "esbuild": "^0.15.7",
+    "@types/node": "^18.11.0",
+    "@types/prettier": "^2.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "dotenv": "^16.0.3",
+    "esbuild": "^0.15.11",
     "esbuild-node-externals": "^1.5.0",
-    "eslint": "^8.23.0",
+    "eslint": "^8.25.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.19",
+    "nodemon": "^2.0.20",
     "rimraf": "^3.0.2"
   }
 }
