--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "axios": "^1.1.2",
+    "axios-cache-interceptor": "^0.10.7",
     "bufferutil": "^4.0.6",
     "discord.js": "^14.6.0",
     "erlpack": "^0.1.4",
