--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "noUnusedParameters": true,
     "removeComments": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "strict": true,
     "target": "esnext"
   },
