--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,7 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
