--- a/package.json
+++ b/package.json
@@ -24,30 +24,31 @@
     "sdk": "yarn dlx @yarnpkg/sdks"
   },
   "dependencies": {
-    "axios": "^1.2.2",
+    "axios": "^1.2.4",
     "axios-cache-interceptor": "^1.0.0",
     "bufferutil": "^4.0.7",
     "discord.js": "^14.7.1",
     "erlpack": "^0.1.4",
-    "fastify": "^4.11.0",
+    "fastify": "^4.12.0",
     "fuse.js": "^6.6.2",
     "log4js": "^6.7.1",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.4",
-    "utf-8-validate": "^6.0.0",
+    "utf-8-validate": "^6.0.1",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "dotenv": "^16.0.3",
-    "esbuild": "^0.16.14",
-    "eslint": "^8.31.0",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "^2.26.0",
+    "esbuild": "^0.17.4",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.20",
-    "rimraf": "^3.0.2"
+    "rimraf": "^4.1.2"
   }
 }
