feat: new BuildingSystem and some languages support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "alwaysStrict": true,
     "baseUrl": ".",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["ESNext"],
     "module": "esnext",
