--- a/package.json
+++ b/package.json
@@ -29,17 +29,20 @@
     "axios": "^1.2.6",
     "axios-cache-interceptor": "^1.0.0",
     "bufferutil": "^4.0.7",
+    "coffeescript": "^2.7.0",
     "discord.js": "^14.7.1",
     "erlpack": "^0.1.4",
     "fastify": "^4.12.0",
     "fuse.js": "^6.6.2",
     "log4js": "^6.7.1",
     "prettier": "^2.8.3",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "utf-8-validate": "^6.0.2",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
+    "@types/coffeescript": "^2.5.2",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
