--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -50,7 +50,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          cache-from: type=gha,scope=main
+          cache-from: type=gha,mode=max,scope=main
           cache-to: type=gha,mode=max,scope=main
 
   helper:
@@ -93,13 +93,13 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          cache-from: type=gha,scope=helper
+          cache-from: type=gha,mode=max,scope=helper
           cache-to: type=gha,mode=max,scope=helper
 
   deploy:
     name: Deploy
     if: github.event_name == 'push'
-    needs: 
+    needs:
       - main
       - helper
     runs-on: ubuntu-latest
