--- a/package.json
+++ b/package.json
@@ -13,48 +13,50 @@
   },
   "private": true,
   "type": "module",
-  "packageManager": "yarn@3.3.1",
+  "packageManager": "yarn@3.4.1",
+  "engines": {
+    "node": ">=18.11.0"
+  },
   "scripts": {
     "build": "./build.js",
     "build:helper": "./helper/build.js",
-    "watch": "./build.js --watch",
+    "watch": "yarn build --watch",
     "check": "tsc",
     "start": "node -r dotenv/config --enable-source-maps ./out/index.js",
-    "dev": "nodemon --watch ./out/index.js --exec \"yarn node -r dotenv/config --enable-source-maps ./out/index.js\"",
+    "dev": "yarn watch & node --watch -r dotenv/config --enable-source-maps ./out/index.js",
     "lint": "eslint --fix . & prettier --write \"./**/*.{ts,tsx,js,json}\"",
     "lint:ci": "eslint lint & prettier --check \"./**/*.{ts,tsx,js,json}\"",
     "sdk": "yarn dlx @yarnpkg/sdks"
   },
   "dependencies": {
-    "axios": "^1.2.6",
-    "axios-cache-interceptor": "^1.0.0",
+    "axios": "^1.3.2",
+    "axios-cache-interceptor": "^1.0.1",
     "bufferutil": "^4.0.7",
     "coffeescript": "^2.7.0",
     "discord.js": "^14.7.1",
     "erlpack": "^0.1.4",
-    "fastify": "^4.12.0",
+    "fastify": "^4.13.0",
     "fuse.js": "^6.6.2",
     "log4js": "^6.7.1",
-    "prettier": "^2.8.3",
-    "sass": "^1.57.1",
-    "typescript": "^4.9.4",
+    "prettier": "^2.8.4",
+    "sass": "^1.58.0",
+    "typescript": "^4.9.5",
     "utf-8-validate": "^6.0.2",
-    "zlib-sync": "^0.1.7"
+    "zlib-sync": "^0.1.8"
   },
   "devDependencies": {
     "@types/coffeescript": "^2.5.2",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.13.0",
     "@types/prettier": "^2.7.2",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "dotenv": "^16.0.3",
-    "esbuild": "^0.17.5",
-    "eslint": "^8.33.0",
+    "esbuild": "^0.17.7",
+    "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
-    "nodemon": "^2.0.20",
-    "pretty-bytes": "^6.0.0",
+    "pretty-bytes": "^6.1.0",
     "rimraf": "^4.1.2"
   }
 }
