--- a/Dockerfile.helper
+++ b/Dockerfile.helper
@@ -1,5 +1,7 @@
 FROM node:lts-alpine AS builder
-RUN apk add python3 make g++ wget
+RUN mkdir -p /etc/apt/apt.conf.d && echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache
+RUN --mount=type=cache,target=/var/cache/apt,sharing=private --mount=type=cache,target=/var/lib/apt,sharing=locked \
+  apk add python3 make g++ wget
 WORKDIR /app
 COPY .yarn/ ./.yarn
 COPY .yarnrc.yml package.json yarn.lock build.js tsconfig.json ./
