--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ on:
       - "**/*.json"
       - yarn.lock
       - Dockerfile
+      - Dockerfile.helper
       - .github/workflows/main.yml
   schedule:
     - cron: 0 1 * * 1
