build(Docker): use slim

--- a/Dockerfile.helper
+++ b/Dockerfile.helper
@@ -19,7 +19,7 @@ RUN --mount=type=cache,target=/root/.yarn/berry/cache \
   yarn workspaces focus --production
 
 
-FROM gcr.io/distroless/nodejs18-debian11:nonroot AS runner
+FROM node:lts-slim AS runner
 WORKDIR /app
 COPY --link package.json .
 COPY --from=production /app/out .
