--- a/Dockerfile.helper
+++ b/Dockerfile.helper
@@ -13,14 +13,8 @@ RUN chmod +x build.js
 RUN yarn node build.js
 
 
-FROM builder AS production
-RUN --mount=type=cache,target=/root/.yarn/berry/cache \
-  --mount=type=cache,target=/root/.cache \
-  yarn workspaces focus --production
-
-
 FROM node:lts-slim AS runner
 WORKDIR /app
 COPY --link package.json .
-COPY --from=production /app/out .
+COPY --from=builder /app/out .
 CMD ["node", "index.js", "--enable-source-maps"]
